--- a/style.css
+++ b/style.css
@@ -868,7 +868,21 @@ a:active {
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
+section {
+	position: relative;
+}
 
+.container {
+}
+
+.filled {
+	background-color: #eee;
+}
+
+.contain {
+	margin: 0 auto;
+	max-width: 1180px;
+}
 
 .whitespace_separator {
 	width: calc(100vw - 60px);
@@ -1462,10 +1476,12 @@ article {
 	background-color: rgba(240, 240, 240, 1);
 	padding: 120px 0 120px;
 	margin-bottom: -60px;
-	height: auto;
+	height: 10000px;
+	z-index: -1;
+	overflow: hidden;
+
 	position: relative;
 	width: 100%;
-	z-index: 150;
 }
 
 .site-info {
@@ -2060,190 +2076,50 @@ em {
 
 
 /* --------- Featured --------- */
+.featured_posts .contain {
+	margin: calc(22.5vh - 60px) 0;
+	display: flex;
+	justify-content: center;
+}
+
 .feature_container {
-	width: calc(100vw - 120px);
-	height: auto;
-	margin: 0 auto;
-	background: rgba(251,251,251,1); /*rgba(251,247,243,1)*/
+	/* The following must add up to 100vh:; */
+	height: 55vh;
+
+	width: 100%;
+	max-width: 850px;
+	border-radius: 5px;
 	z-index: 10;
-	position: relative;
-	overflow: hidden;
-
+	/*overflow: hidden;*/
 }
 
-#feature_container {
-	transition: 3s all ease-out;
-	transition: 0s top ease-out;
-}
+.feature_background_container {
+	/* same width and height as the feature_container */
+	/* The following must add up to 100vh:; */
+	height: 55vh;
 
-.display_feature {
-	width: calc(100vw - 120px);
-	height: calc(100vh - 120px);
-	display: block;
-	top: 0px;
-	left: 0px;
+	width: 100%;
+	max-width: 850px;
+	border-radius: 5px;
+	background-color: rgba(0,255,255,0.2);
 	position: absolute;
 }
 
-.display_feature_color {
-	width: 100%;
-	height: 100%;
-	/*background-color: rgba(30, 30, 30, 0.5);*/
-	position: absolute;
-}
-
-.display_feature_animation_container {
-	width: 100%;
-	height: 100%;
-	background-color: rgba(30, 30, 30, 0.6);
-	padding: 20px;
-	position: absolute;
-	z-index: 1;
-}
-
-.display_feature_animation {
-	width: 100%;
-	height: 100%;
-	/*background-color: rgba(200, 10, 100, 0.5);*/
-	position: relative;
-	display: block;
-}
-
-.display_feature_video {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	opacity: 0;
-
-	background-position: center;
-	background-size: cover;
-
-	transition: 400ms opacity ease-out;
-	transform: translateZ(0);
-	-webkit-transform: translateZ(0);
-}
-
-.display_feature_content {
-	width: 100%;
-	height: calc(100vh - 120px);
-	/*background-color: rgba(15, 10, 100, 0.5);*/
-	position: relative;
-	/*padding: 70px 20% 70px 20%;*/
-	opacity: 0;
-	margin-top: -400px;
-
-	color: #fff;
-	text-align: center;
-
-	transition: 400ms all ease-out;
-	transform: translateZ(0);
-	-webkit-transform: translateZ(0);
-}
-
-.display_feature_content:first-child {
-	margin-top: 0;
-}
-
-.display_feature_icon {
-	margin: 0 auto;
-	margin-top: 20px;
-	width: 65px;
-	height: 65px;
-	background-position: center;
-	background-size: contain;
-	background-repeat: no-repeat;
-
-	position: relative;
-}
-
-.display_feature_content h1 {
-	position: relative;
-	margin: 0;
-}
-
-.display_feature_content p {
-	font-weight: 400; /* Regular */
-	margin-top: 0px;
-	color: #fff;
-	margin-bottom: .25rem;
-	/*padding-bottom: 25px;*/
-}
-
-.display_feature_link {
-	position: relative;
-	text-decoration-color: #fff;
-	text-decoration: none;
-	color: #fff;
-}
-
-.display_feature_link:hover, .display_feature_link:focus {
-	text-decoration: underline;
-	text-decoration-color: #fff;
-	/*border-bottom: 3px solid white;*/
-	/*border-top: 3px solid white;*/
-	top: -7px;
-}
-
-.display_feature_content button {
-	font-weight: 600;
-	padding: 8px 20px 8px 20px;
-	background-color: rgba(60, 110, 130, 1);
-	font-size: 20px;
-	text-transform: uppercase;
-	border: 1px solid #fff;
-	box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.8);
-	margin-top: 60px;
-}
-
-.display_feature_content_container {
-	width: calc(100vw - 120px);
-	height: auto;
-	top: 0px;
-	left: 0px;
-	display: block;
-	position: relative;
-	z-index: 105;
-	/*background-color: rgba(50,200,50,.5);*/
-}
-
-.display_feature_text {
-	width: 50%;
-	height: 9rem;
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	margin: auto;
-	/*top: calc(50% - 6.75rem);*/
-}
-
-.display_feature_text p {
-	font-family: 'Libre Baskerville', serif;
-	font-style: italic;
-}
-
-#featured_pagination_container {
-	width: 35px;
-	padding: 10px;
-	height: auto;
+.feature_background_container_fixed {
 	position: fixed;
-	right: 60px;
-	top: 45%;
-	overflow: hidden;
+	top: calc(22.5vh);
 }
 
-#featured_pagination {
-	width: 25px;
-	height: auto;
-	font-size: 1.5em;
-	margin-left: 25px;
-	opacity: .5;
-
-	transition: 1s all ease-out;
-	transform: translateZ(0);
-	-webkit-transform: translateZ(0);
+.feature_instance {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	height: 100%;
+	background-color: rgba(255,0,255,0.2);
 }
+
+
 /* --------- Featured --------- */
 
 
