--- a/style.css
+++ b/style.css
@@ -1095,6 +1095,12 @@ article {
 	padding: 50px 0;
 }
 
+.other_projects_padding {
+	padding-left: 1rem !important;
+	padding-right: 1rem !important;
+	padding-top: calc(1rem*2);
+}
+
 @media (max-width: 1500px) {
 	.other_projects_container {
 		padding: 30px 0;
@@ -1102,13 +1108,26 @@ article {
 }
 
 .other_pojects {
-	height: 29rem;
-	float: left;
+	height: 28rem;
+	/*margin-top: 2rem;*/
+	/*float: left;*/
 	overflow: hidden;
-	margin-left: 5px;
-	margin-top: 5px;
-	/*border-radius: 2px;*/
-	/*box-shadow: 0px 3px 10px rgba(0,0,0,0.1);*/
+	/*margin-left: 30px !important;*/
+	/*margin-right: 30px !important;*/
+	border-radius: 5px;
+	box-shadow: 10px 10px 30px rgba(0,0,0,0.1);
+
+	transition: all 250ms ease-out;
+}
+
+.other_pojects:hover {
+	box-shadow: 0px 0px 150px rgba(0,0,0,0.4);
+	z-index: 10;
+	transform: scale(1.01, 1.01);
+}
+
+.other_pojects_hover {
+	z-index: 10;
 }
 
 .other_projects_big_img_wrapper {
@@ -1129,34 +1148,14 @@ article {
 	background-color: rgba(0,0,0,0.3);
 	position: absolute;
 	bottom: 0;
+	opacity: 1;
 
-	transition-delay: 250ms;
-	transition: all 0ms ease-out;
+	/*transition-delay: 250ms;*/
+	transition: all 250ms ease-out;
 }
 
 .other_projects_img_overlay_toggled {
 	opacity: 0;
-}
-
-.other_projects_img_overlay_2 {
-	background-color: #fff;
-	position: absolute;
-	bottom: 0;
-	height: 0%;
-	z-index: 10;
-	pointer-events: none;
-}
-
-.other_projects_img_overlay_2_toggled {
-	animation: awesomeanimation 500ms;
-}
-
-@keyframes awesomeanimation {
-	0% {height: 0%;}
-	49.99% {bottom: 100;}
-	50% {height: 100%; bottom: 0px;}
-	99.99% {bottom: 100%;}
-	100% {height: 0%; bottom: 0;}
 }
 
 .other_projects_logo {
@@ -1183,27 +1182,17 @@ article {
 	margin-left: 0 !important;
 }
 
-.other_pojects_05 {
-	width: calc(40% - 3.75px);
-	min-width: 460px;
-}
-
-.other_pojects_1 {
-	width: calc(20% - 3.75px);
-	min-width: 230px;
-	margin-left: 4px;
-}
-
 .other_pojects_2 {
 	width: 100%;
+	float: left;
 	min-width: 230px;
-	height: 232.5px;
-	margin: 5px 0 0 0;
+	height: calc(28rem / 2 - 1rem);
+	margin: 2rem 0 0 0;
 }
 
 .other_projects_2_container {
 	display: block;
-	margin-top: -5px;
+	margin-top: -2rem;
 }
 
 #other_projects_num4 {
@@ -1863,6 +1852,7 @@ em {
 	height: 200%;
 	position: absolute;
 	top: 0px;
+	pointer-events: none;
 
 	transition: opacity 500ms ease;
 
@@ -2039,6 +2029,7 @@ em {
 	max-height: 100%;
 	object-fit: cover;
 	height: 100%;
+	width: 100%;
 }
 
 #intro_txt {
