--- a/style.css
+++ b/style.css
@@ -884,6 +884,8 @@ a:active {
 section {
 	position: relative;
 	overflow: hidden;
+	/*  */
+	/*margin-bottom: 60px;*/
 }
 
 section:after {
@@ -892,8 +894,10 @@ section:after {
 	left: -60px;
 	height: 60px;
 	background: #fff;
-	position: relative;
 	display: block;
+	position: relative;
+	/*margin: 15px 0;*/
+	/*top: 60px;*/
 }
 
 .container {
@@ -1040,7 +1044,7 @@ article {
 }
 
 .content_section_padding {
-	padding: 60px 150px;
+	/*padding: 60px 150px;*/
 }
 
 .content_section h1 {
@@ -1081,22 +1085,17 @@ article {
 /*--------------------------------------------------------------
 ### Front-page
 --------------------------------------------------------------*/
-.other_projects_container {
-	height: auto;
-	margin-top: 0;
-	padding: 50px 0;
+.other_projects .contain {
+}
+
+@media (min-width: 1316px) {
+	.other_projects .contain {
+		margin: 2rem auto;
+	}
 }
 
 .other_projects_padding {
-	padding-left: 1rem !important;
-	padding-right: 1rem !important;
-	padding-top: calc(1rem*2);
-}
-
-@media (max-width: 1500px) {
-	.other_projects_container {
-		padding: 30px 0;
-	}
+	padding: 1rem !important;
 }
 
 .other_pojects {
@@ -2151,16 +2150,17 @@ em {
 
 .feature_instance:first-of-type {
 	/* Must be half of feature_instance height */
-	margin-top: 17.5vh;
+	margin-top: 10vh;
 }
 
 .feature_instance:last-of-type {
-	margin-bottom: 17.5vh;
+	margin-bottom: 10vh;
 }
 
 .feature_instance {
 	height: 35vh;
 
+	pointer-events: none;
 	opacity: 0;
 	width: 100%;
 	display: flex;
