FEATURE (Feature slider): Added touch events for mobile
Touch events:
	- These are to prevent the address bar showing/hiding while
	  changing scroll direction. Also stops the scroll instantly when
	  the finger is lifted to prevent multiple slides being scrolled
	  in one gesture.

--- a/css/style_small.css
+++ b/css/style_small.css
@@ -319,7 +319,7 @@ img.alignleft, img.alignright, img.aligncenter {
 
 /* Remove the background, as only a couple of pixels of it would be visible */
 .featured_posts.filled {
-	/*background-color: #fff;*/
+	background-color: #fff;
 }
 
 .feature_background_container {
