--- a/css/style_medium.css
+++ b/css/style_medium.css
@@ -18,3 +18,38 @@ html {
 	padding-left: 0px;
 	padding-right: 0px;
 }
+
+
+/*--------------------------------------------------------------
+# Feature slider
+--------------------------------------------------------------*/
+.featured_posts .contain {
+	margin: 0 auto;
+}
+
+/* Remove the background, as only a couple of pixels of it would be visible */
+.featured_posts.filled {
+	background-color: #fff;
+}
+
+.feature_background_container {
+	height: calc(100vh - 60px - 60px);
+	box-shadow: initial;
+}
+
+.feature_background_container_fixed {
+	width: calc(100% - 120px); /* Excluding the white margins */
+	position: fixed;
+	top: calc(60px);
+}
+
+.feature_instance:first-of-type {
+	/* 35vh = instance height */
+	margin-top: calc((100vh - 60px - 60px)/2 - 35vh/2);
+}
+
+.feature_instance:last-of-type {
+	/* 35vh = instance height */
+	margin-bottom: calc((100vh - 60px - 60px)/2 - 35vh/2);
+}
+
