--- a/css/style_small.css
+++ b/css/style_small.css
@@ -26,13 +26,7 @@ section:after {
 	width: calc(100% - 20px);
 }
 
-#intro_txt {
-	font-size: 12px;
-	padding: 20px;
-	margin-top: 50%;
-	position: absolute;
-	top: -20px;
-}
+
 
 .intro_info {
 	width: 100%;
@@ -130,10 +124,9 @@ section:after {
 }
 
 /* intro */
-#intro {
-	width: 100%;
-	left: 0px;
-	height: 100vh;
+#intro_container {
+	width: calc(100% + 20px);
+	left: -10px;
 }
 
 .feature_container {
@@ -307,38 +300,4 @@ img.alignleft, img.alignright, img.aligncenter {
 	height: .75rem;
 	font-size: .75rem;
 	font-weight: initial;
-}
-
-
-/*--------------------------------------------------------------
-# Feature slider
---------------------------------------------------------------*/
-.featured_posts .contain {
-	margin: 0 auto;
-}
-
-/* Remove the background, as only a couple of pixels of it would be visible */
-.featured_posts.filled {
-	background-color: #fff;
-}
-
-.feature_background_container {
-	height: calc(100vh - 60px - 10px);
-	box-shadow: initial;
-}
-
-.feature_background_container_fixed {
-	width: calc(100% - 20px); /* Excluding the white margins */
-	position: fixed;
-	top: calc(60px);
-}
-
-.feature_instance:first-of-type {
-	/* 35vh = instance height */
-	margin-top: calc((100vh - 60px - 10px)/2 - 35vh/2);
-}
-
-.feature_instance:last-of-type {
-	/* 35vh = instance height */
-	margin-bottom: calc((100vh - 60px - 10px)/2 - 35vh/2);
 }
