CLEAN UP: Cleaned up the posts template

--- a/css/style_small.css
+++ b/css/style_small.css
@@ -10,7 +10,7 @@ h1 {
 	font-size: 2.5rem;
 }
 
-section:after {
+section:after, article > header:after {
 	width: calc(100% + 20px);
 	left: -10px;
 	height: 10px;
@@ -300,4 +300,50 @@ img.alignleft, img.alignright, img.aligncenter {
 	height: .75rem;
 	font-size: .75rem;
 	font-weight: initial;
+}
+
+
+/*--------------------------------------------------------------
+# Feature slider
+--------------------------------------------------------------*/
+.featured_posts .contain {
+	margin: 0 auto;
+}
+
+/* Remove the background, as only a couple of pixels of it would be visible */
+.featured_posts.filled {
+	background-color: #fff;
+}
+
+.feature_background_container {
+	height: calc(100vh - 60px - 10px);
+	box-shadow: initial;
+}
+
+.feature_background_container_fixed {
+	width: calc(100% - 20px); /* Excluding the white margins */
+	position: fixed;
+	top: calc(60px);
+}
+
+.feature_instance:first-of-type {
+	/* 35vh = instance height */
+	margin-top: calc((100vh - 60px - 10px)/2 - 35vh/2);
+}
+
+.feature_instance:last-of-type {
+	/* 35vh = instance height */
+	margin-bottom: calc((100vh - 60px - 10px)/2 - 35vh/2);
+}
+
+
+/*--------------------------------------------------------------
+# Content
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+## Posts and pages
+--------------------------------------------------------------*/
+.post_padding {
+	padding-left: 10px;
+	padding-right: 10px;
 }
