--- a/css/style_medium.css
+++ b/css/style_medium.css
@@ -11,6 +11,10 @@ html {
 	padding-left: 0px;
 }
 
+.post_work_table td:nth-of-type(1) p {
+	text-align: center;
+}
+
 .post_work_table td:nth-of-type(2) {
 	width: 100%;
 	text-align: justify;
