FEATURE: Set intro height to a fixed value to avoid issues on mobile
Fixed height:
	- On mobile, when scrolling the address bar hides and reappears
	  which changes the value of 1vh. This caused the whole page to
	  "jump" because of the change in values.
	  	Now the intro height is set through JavaScript, BUT ITS
	  NOT TRUELY A FIXED VALUE, as it will update the intro height
	  if window is resized more than 200px.

--- a/css/style_small.css
+++ b/css/style_small.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-	font-size: 2.5rem;
+	font-size: 2.3rem;
 }
 
 section:after, article > header:after {
@@ -127,6 +127,11 @@ section:after, article > header:after {
 #intro_container {
 	width: calc(100% + 20px);
 	left: -10px;
+}
+
+#intro_txt {
+	max-width: calc(100% - 20px);
+	padding: 0 1.5rem;
 }
 
 .feature_container {
