BUG FIX: Decreased col- margins (15px -> 2.5px)

--- a/css/style_medium.css
+++ b/css/style_medium.css
@@ -28,7 +28,7 @@ html {
 # Feature slider
 --------------------------------------------------------------*/
 .featured_posts .contain {
-	margin: 0 auto;
+	padding: 0;
 }
 
 /* Remove the background, as only a couple of pixels of it would be visible */
