--- a/css/style_small.css
+++ b/css/style_small.css
@@ -351,6 +351,9 @@ img.alignleft, img.alignright, img.aligncenter {
 ## Posts and pages
 --------------------------------------------------------------*/
 .post_padding {
-	padding-left: 10px;
-	padding-right: 10px;
+	padding: 20px;
+}
+
+.contain > h1 {
+	margin-top: 0;
 }
