--- a/css/style_small.css
+++ b/css/style_small.css
@@ -105,7 +105,7 @@ section:after, article > header:after {
 }
 
 .this_page_transition, .next_page_transition {
-	margin: -10px 0 0 -10px;
+	margin-left: -10px;
 }
 
 #left_box_margin,
