--- a/style.css
+++ b/style.css
@@ -309,14 +309,14 @@ h1 {
 }
 
 h2 {
-	font-size: 1.5em;
-	font-family: Arial;
-	margin-top: 1em;
-	font-weight: 400;
+	font-size: 1.625rem;
+	font-weight: 300;
+	line-height: 1.98rem;
+	color: rgb(25,25,25);
 }
 
 h3 {
-	font-size: 1.625rem;
+	font-size: 1.1rem;
 	font-weight: 300;
 	line-height: 1.98rem;
 	color: rgb(25,25,25);
@@ -1128,14 +1128,13 @@ article {
 
 .other_pojects {
 	height: 28rem;
-	/*margin-top: 2rem;*/
-	/*float: left;*/
 	overflow: hidden;
-	/*margin-left: 30px !important;*/
-	/*margin-right: 30px !important;*/
 	border-radius: 5px;
 	box-shadow: 10px 10px 30px rgba(0,0,0,0.1);
 	transform: scale(1, 1);
+
+	display: flex;
+	flex-direction: column;
 
 	transition: all 250ms ease-out;
 }
@@ -1153,6 +1152,7 @@ article {
 .other_projects_big_img_wrapper {
 	width: 100%;
 	height: 66%;
+	flex-grow: 3;
 	position: relative;
 }
 
@@ -1196,6 +1196,7 @@ article {
 	filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.8));
 }
 
+/* The big projects */
 .other_projects_text_wrapper {
 	height: 34%;
 	width: 100%;
@@ -1203,6 +1204,12 @@ article {
 	/*margin-top: 5px;*/
 	background-color: #fff;
 	color: rgb(130,130,130);
+}
+
+/* The small projects */
+.other_pojects_2 .other_projects_text_wrapper {
+	padding: .7rem 1rem;
+	height: 3rem;
 }
 
 .other_projects_column_num_1 {
@@ -1234,7 +1241,7 @@ article {
 	margin-top: 10px;
 }
 
-.other_projects_text_wrapper p, .other_projects_text_wrapper h3 {
+.other_projects_text_wrapper p, .other_projects_text_wrapper h2, .other_projects_text_wrapper h3 {
 	margin: 0;
 }
 
