--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
 # Normalize
+# Modernize
 # Typography
 # Elements
 # Forms
@@ -267,6 +268,18 @@ td,
 th {
 	padding: 0;
 }
+
+/*--------------------------------------------------------------
+# Modernize
+--------------------------------------------------------------*/
+.object_fit_IE_fallback {
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+
 
 /*--------------------------------------------------------------
 # Typography
