FEATURE (Header): Switched to FlexBox, cleaned up and added GitHub link

--- a/css/style_small.css
+++ b/css/style_small.css
@@ -21,7 +21,7 @@ section:after, article > header:after {
 	left: calc(-100vw);
 }
 
-.header_section_width {
+.contain_header {
 	padding: 15px 15px 15px 15px;
 	width: calc(100% - 20px);
 }
