--- a/style.css
+++ b/style.css
@@ -733,6 +733,7 @@ a:active {
 	width: 50%;
 }
 
+
 /*--------------------------------------------------------------
 ## Next page transition
 --------------------------------------------------------------*/
@@ -778,6 +779,55 @@ a:active {
 .site, #intro {
 	margin-top: 50px;
 }
+
+
+/*--------------------------------------------------------------
+## Next page transition
+--------------------------------------------------------------*/
+.post_navigation_button {
+	width: 100%;
+	height: 5rem;
+	padding: 2rem 0.75rem;
+	border-radius: 5px;
+}
+
+.post_navigation_button:hover {
+	background-color: #eee;
+	cursor: pointer;
+}
+
+.post_navigation_preview {
+	position: absolute;
+	width: 400px;
+	height: 200px;
+	background-color: green;
+	border-radius: 5px;
+	color: #fff;
+
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.post_navigation_preview h1 {
+	font-size: 2rem;
+	margin: 0;
+}
+
+.post_navigation_preview p {
+	margin: 0;
+}
+
+.post_navigation_previous {
+	margin-left: 75px;
+	margin-top: calc(-100px + 0.5rem);
+}
+
 
 /*--------------------------------------------------------------
 # Accessibility
@@ -2088,6 +2138,9 @@ em {
 #bottom_box_margin {
 	width: 60px;
 	height: calc(100%);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 #right_box_margin {right: 0; top: 0;}
 #bottom_box_margin {bottom: 0; height: 60px; width: 100%; left: 0;}
