--- a/style.css
+++ b/style.css
@@ -802,6 +802,7 @@ a:active {
 	height: 200px;
 	border-radius: 5px;
 	color: #fff;
+	text-align: center;
 	overflow: hidden;
 	/*border: 5px solid #fff;*/
 	opacity: 1;
@@ -811,12 +812,16 @@ a:active {
 	display: flex;
 	justify-content: center;
 
+	will-change: transform;
+	transform: translateZ(0);
+
 	transition: all 250ms ease-out;
 }
 
 .post_navigation_preview_hidden {
-	width: 200px;
-	opacity: 0;
+	width: 0px;
+	/*opacity: 0;*/
+	/*left: -400px !important;*/
 }
 
 .post_navigation_preview_constant_width {
@@ -858,20 +863,23 @@ a:active {
 	font-size: 2rem;
 	margin: 0;
 	z-index: 20;
+	max-width: 80%;
 }
 
 .post_navigation_preview p {
 	margin: 0;
 	z-index: 20;
+	max-width: 80%;
+	text-shadow: -1px 1px 1px rgba(0,0,0,0.5), 0 0px 20px rgba(0,0,0,.6);
 }
 
 .post_navigation_previous {
-	left: 80px;
+	left: 60px;
 	margin-top: calc(-100px + 0.5rem);
 }
 
 .post_navigation_next {
-	right: 80px;
+	right: 60px;
 	margin-top: calc(-100px + 0.5rem);
 }
 
@@ -2142,8 +2150,10 @@ em {
 
 .frame {
 	background-color: #fff;
-	/*overflow: hidden;*/
 	z-index: 10;
+
+	will-change: transform;
+	transform: translateZ(0);
 
 	transition: all 200ms ease-out;
 }
@@ -2158,6 +2168,10 @@ em {
 .frame_lefrig_hidden {
 	width: 0%;
 	height: 100%;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .header_fill_visible {
@@ -2186,9 +2200,6 @@ em {
 #bottom_box_margin {
 	width: 60px;
 	height: calc(100%);
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 #right_box_margin {right: 0; top: 0;}
 #bottom_box_margin {bottom: 0; height: 60px; width: 100%; left: 0;}
