--- a/style.css
+++ b/style.css
@@ -860,6 +860,8 @@ a:active {
 	width: 400px;
 	height: 200px;
 	z-index: 20;
+	left: 0;
+	top: 0;
 }
 
 .post_navigation_image_overlay {
@@ -881,7 +883,7 @@ a:active {
 }
 
 .post_navigation_preview h1 {
-	font-size: 2rem;
+	font-size: 1.5rem;
 	margin: 0;
 	z-index: 20;
 	max-width: 80%;
