--- a/style.css
+++ b/style.css
@@ -2182,6 +2182,7 @@ em {
 .frame {
 	background-color: #fff;
 	z-index: 10;
+	overflow: hidden;
 
 	will-change: transform;
 	transform: translateZ(0);
