IMPROVEMENT: Improved support for long headlines on mobile screens

--- a/css/style_small.css
+++ b/css/style_small.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-	font-size: 2.3rem;
+	font-size: 2rem;
 }
 
 section:after, article > header:after {
@@ -133,6 +133,14 @@ section:after, article > header:after {
 
 #intro_txt {
 	max-width: calc(100% - 20px);
+}
+
+#intro_txt h1 {
+	letter-spacing: 0.3rem;
+	padding: 0 0.2rem;
+}
+
+#intro_txt p {
 	padding: 0 1.5rem;
 }
 
